правки для параметризированых тестов + новые класс Dogs с практикой с курса ThreadQA